--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -11,7 +11,7 @@
 <section class="board">
     <div class="page-title">
         <div class="container">
-            <h3>게시글 목록보기</h3>
+            <h3>게시글 목록보기11</h3>
         </div>
     </div>
 
